--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,6 +78,25 @@ header {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+.control-list {
+  float: right;
+}
+
+.ok {
+  border:1px solid #4592af
+}
+
+.edit-input {
+  margin-top: 10px;
+  width: 500px
+}
+
+.edit-description {
+  resize: none;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
 @media screen and (max-width: 992px) {
   
   .card img{
@@ -99,3 +118,5 @@ header {
   }
   
 }
+
+
