--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,24 +23,35 @@
       <div class="card-columns">
 
         {{#each resList}}
-        <a href="/restaurants/{{this.id}}" class="text-secondary">
-          <div class="card mb-3">
+
+        <div class="card mb-3">
+          <a href="/restaurants/{{this.id}}" class="text-secondary">
             <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
-            <div class="card-body p-3">
-              <h6 class="card-title mb-1">{{this.name}}</h6>
+          </a>
+          <div class="card-body p-3">
+            <h6 class="card-title mb-1">{{this.name}}</h6>
 
-              <div class="restaurant-category mb-1">
-                <i class="fas fa-utensils pr-2"></i> {{this.category}}
-              </div>
-
+            <div class="restaurant-category mb-1">
+              <i class="fas fa-utensils pr-2"></i> {{this.category}}
               <span class="badge badge-pill badge-danger font-weight-normal">
-                4.1
+                {{{this.rating}}}
                 <i class="fas fa-star fa-xs"></i>
               </span>
-
             </div>
+
+            <div class="row control-list">
+              <button type="button" onclick="location.href='/restaurants/{{{this.id}}}'" class="btn"><i
+                  class="fas fa-search"></i></button>
+              <button type="button" onclick="location.href='/restaurant/{{{this.id}}}/edit'" class="btn"><i
+                  class="far fa-edit"></i></button>
+              <form action="/restaurant/{{{this.id}}}/delete" method="POST">
+                <button type="submit" class="btn"><i class="far fa-trash-alt"></i></button>
+              </form>
+            </div>
+
           </div>
-        </a>
+        </div>
+
 
         {{/each}}
       </div>
