--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,6 +19,9 @@
           alt="我的餐廳清單">
         我的餐廳清單
       </a>
+      <div class="control-list">
+        <button type="button" onclick="location.href='/restaurant/new'" class="btn"><i class="fas fa-plus">
+            新增餐廳</i></button></div>
     </div>
   </nav>
 
