edit required to edit and new page

--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -7,14 +7,14 @@
             <i class="fas fa-utensils pr-2"></i>
             姓名：
           </span>
-          <input type="text" name="name" value="" class="edit-input">
+          <input type="text" name="name" value="" class="edit-input" required>
         </p>
         <p class="mb-1">
           <span class="text-secondary">
             <i class="fas fa-list-ul pr-1"></i>
             類別：
           </span>
-          <input type="text" name="category" value="" class="edit-input">
+          <input type="text" name="category" value="" class="edit-input" required>
         </p>
 
         <p class="mb-1">
@@ -22,7 +22,7 @@
             <i class="fas fa-map-marker-alt pr-2"></i>
             地址：
           </span>
-          <input type="text" name="location" value="" class="edit-input">
+          <input type="text" name="location" value="" class="edit-input" required>
           <a href="https://www.google.com.tw/maps/" class="text-secondary" target="_blank">
             <i class="fas fa-location-arrow pr-2 fa-xs"></i>
           </a>
@@ -33,7 +33,7 @@
             <i class="fas fa-mobile-alt pr-2"></i>
             電話：
           </span>
-          <input type="text" name="phone" value="" class="edit-input">
+          <input type="text" name="phone" value="" class="edit-input" required>
         </p>
 
         <p class="mb-2">
@@ -50,7 +50,7 @@
           </span></p>
 
         <p class="mb-3">
-          <textarea name="description" cols="100" rows="5" style="resize:none"></textarea>
+          <textarea name="description" cols="100" rows="5" style="resize:none" required></textarea>
         </p>
         <p class="mb-5">
           <button type="submit" class="btn ok">確認送出</button>
