--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
         我的餐廳清單
       </a>
       <div class="control-list">
-        <button type="button" onclick="location.href='/restaurant/new'" class="btn"><i class="fas fa-plus">
+        <button type="button" onclick="location.href='/restaurants/new'" class="btn btn-success"><i class="fas fa-plus">
             新增餐廳</i></button></div>
     </div>
   </nav>
@@ -35,6 +35,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
