--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-10 mx-auto">
-      <form action="/edit/{{{res.id}}}" method="POST">
+      <form action="/restaurants/edit/{{{res.id}}}?_method=PUT" method="POST">
         <p class="mb-1">
           <span class="text-secondary">
             <i class="fas fa-utensils pr-2"></i>
