Add login and logout function

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<form action="/user/login" method="POST">
+<form action="/users/login" method="POST">
   <div class="container mb-5">
     <div class="row justify-content-center">
       <div class="card card-body col-md-5 ">
@@ -8,14 +8,14 @@
           <input type="text" name="email" id="email" value="{{{email}}}" placeholder="E-mail" class="form-control mb-3">
 
           <label for="password">Password</label>
-          <input type="text" name="password" id="password" value="{{{password}}}" placeholder="Password"
+          <input type="password" name="password" id="password" value="{{{password}}}" placeholder="Password"
             class="form-control mb-3">
         </div>
 
         <button type="submit" class="btn btn-success mb-4">確認</button>
 
         <p>
-          No account? <a href="/user/register">Register Now!</a>
+          No account? <a href="/users/register">Register Now!</a>
         </p>
       </div>
     </div>
