--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,9 +19,18 @@
           alt="我的餐廳清單">
         我的餐廳清單
       </a>
+
       <div class="control-list">
-        <button type="button" onclick="location.href='/restaurants/new'" class="btn btn-success"><i class="fas fa-plus">
-            新增餐廳</i></button></div>
+        {{#if isAuthenticated}}
+        <button type="button" onclick="location.href='/restaurants/new'" class="btn btn-success"><i
+            class="fas fa-plus">新增餐廳</i></button>
+        <button type="button" onclick="location.href='/users/logout'" class="btn btn-success">登出</button>
+        {{else}}
+        <button type="button" onclick="location.href='/users/login'" class="btn btn-success">登入</button>
+        {{/if}}
+      </div>
+
+
     </div>
   </nav>
 
