--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,4 +1,4 @@
-<form action="/user/register" method="POST">
+<form action="/users/register" method="POST">
   <div class="container mb-5">
     <div class="row justify-content-center">
       <div class="card card-body col-md-5 ">
