--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,6 +3,7 @@
     <div class="row justify-content-center">
       <div class="card card-body col-md-5 ">
         <h1>Login</h1>
+        {{> messages}}
         <div>
           <label for="email">E-mail</label>
           <input type="text" name="email" id="email" value="{{{email}}}" placeholder="E-mail" class="form-control mb-3">
