--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -3,6 +3,7 @@
     <div class="row justify-content-center">
       <div class="card card-body col-md-5 ">
         <h1>Register</h1>
+        {{> messages}}
         <div>
           <label for="name">Name</label>
           <input type="text" name="name" id="name" value="{{{name}}}" placeholder="Name" class="form-control mb-3">
