Add facebook login

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,7 +13,8 @@
             class="form-control mb-3">
         </div>
 
-        <button type="submit" class="btn btn-success mb-4">確認</button>
+        <button type="submit" class="btn btn-success mb-2">確認</button>
+        <a href="/auth/facebook" class="btn btn-primary mb-2">Facebook登入</a>
 
         <p>
           No account? <a href="/users/register">Register Now!</a>
