--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -43,7 +43,8 @@
         {{res.description}}
       </p>
 
-      <img class="rounded mx-auto d-block mb-4 w-100" src="{{res.image}}" alt="{{res.name}}" style="max-width: 600px;">
+      <img class="rounded mx-auto d-block mb-4 w-100" src="/img/{{res.image}}" alt="{{res.name}}"
+        style="max-width: 600px;">
     </div>
   </div>
 </div>
