--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,7 +32,6 @@
   </div>
 </div>
 
-
 <!-- restaurant list -->
 <div class="container mt-5">
   <div class="row">
@@ -43,7 +42,7 @@
 
       <div class="card col-md-3 ml-1 mr-1 mb-3">
         <a href="/restaurants/{{this.id}}" class="text-secondary">
-          <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
+          <img class="card-img-top" src="/img/{{this.image}}" alt="{{this.name}}">
         </a>
         <div class="card-body p-3">
           <h6 class="card-title mb-1">{{this.name}}</h6>
@@ -59,7 +58,7 @@
           <div class="row control-list">
             <button type="button" onclick="location.href='/restaurants/{{{this.id}}}'" class="btn"><i
                 class="fas fa-search"></i></button>
-            <button type="button" onclick="location.href='/restaurant/{{{this.id}}}/edit'" class="btn"><i
+            <button type="button" onclick="location.href='/restaurants/{{{this.id}}}/edit'" class="btn"><i
                 class="far fa-edit"></i></button>
             <form action="/restaurants/{{{this.id}}}/delete?_method=DELETE" method="POST">
               <button type="submit" class="btn"><i class="far fa-trash-alt"></i></button>
